<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reports">

    <TextView
        android:id="@+id/lbltitleReports"
        android:layout_width="412dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/reports"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <LinearLayout
        android:id="@+id/lyNumberCars"
        android:layout_width="410dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbltitleReports">

        <TextView
            android:id="@+id/lblNumberRegistered"
            android:layout_width="203dp"
            android:layout_height="30dp"
            android:text="@string/number_cars_registered" />

        <TextView
            android:id="@+id/lblNumberCarRegitered"
            android:layout_width="206dp"
            android:layout_height="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyNumberKias"
        android:layout_width="409dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyNumberCars">

        <TextView
            android:id="@+id/lblTextNumberKia"
            android:layout_width="203dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/number_cars_KIA" />

        <TextView
            android:id="@+id/lblNumberKiaRegitered"
            android:layout_width="206dp"
            android:layout_height="30dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyNumberFords"
        android:layout_width="409dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyNumberKias">

        <TextView
            android:id="@+id/lblNumberFords"
            android:layout_width="203dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/number_fords_regitered" />

        <TextView
            android:id="@+id/lblNumberFordsRegistered"
            android:layout_width="209dp"
            android:layout_height="30dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyNumberChev"
        android:layout_width="409dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyNumberFords">

        <TextView
            android:id="@+id/lblNumberChev"
            android:layout_width="203dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/number_chevrolet_registered" />

        <TextView
            android:id="@+id/lblNumberChevRegistered"
            android:layout_width="209dp"
            android:layout_height="30dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyNumberChev">

        <TextView
            android:id="@+id/lblColorRed"
            android:layout_width="203dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/number_cars_red" />

        <TextView
            android:id="@+id/lblNumberRed"
            android:layout_width="209dp"
            android:layout_height="30dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/lblColorWhite"
            android:layout_width="203dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/number_cars_white" />

        <TextView
            android:id="@+id/lblNumberWhite"
            android:layout_width="209dp"
            android:layout_height="30dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="411dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/lblColorBlack"
            android:layout_width="203dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/number_cars_black" />

        <TextView
            android:id="@+id/lblNumberBlack"
            android:layout_width="209dp"
            android:layout_height="30dp"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>